--- a/15.8.023/nav.css
+++ b/15.8.023/nav.css
@@ -43,9 +43,47 @@ li {
 }
 #third{
     grid-column: span 3;
-}
+  overflow: hidden;  
+  /* width: 200px; */
+  height: 600px;
+  }
 .sBlog{
-    background: green;
+    /* background: green; */
+}
+.blogOne {
+  /* border: 2px solid red; */
+  margin-top: 10px;
+}
+.blogOne img {
+  border: 2px solid red;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+/* pageNation */
+.pagenation{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+.pagenation ul {
+  background: darkgray;
+  
+  width: fit-content;
+  margin: 5px;
+  padding: 10px;
+  border-radius: 30px;
+ 
+}
+#page a{ list-style: none;
+background: darkkhaki;
+text-decoration: none;
+color: wheat;
+border: 2px solid black;
+box-shadow: inset;
+border-radius: 30px;
+padding: 10px;
+
 }
 @media screen and (max-width:575px) {
   ul {
