--- a/15.8.023/nav.css
+++ b/15.8.023/nav.css
@@ -47,9 +47,7 @@ li {
   /* width: 200px; */
   height: 600px;
   }
-.sBlog{
-    /* background: green; */
-}
+
 .blogOne {
   /* border: 2px solid red; */
   margin-top: 10px;
@@ -77,30 +75,79 @@ th {
   background-color: #f2f2f2;
 }
 /* pagiNation */
-.pagenation{
+.pagenation {
   justify-content: center;
   align-items: center;
   display: flex;
 }
+
 .pagenation ul {
   background: darkgray;
-  
   width: fit-content;
   margin: 5px;
   padding: 10px;
   border-radius: 30px;
- 
 }
-#page a{ list-style: none;
-background: darkkhaki;
-text-decoration: none;
-color: wheat;
-border: 2px solid black;
-box-shadow: inset;
-border-radius: 30px;
-padding: 10px;
 
+#page a {
+  list-style: none;
+  background: darkkhaki;
+  text-decoration: none;
+  color: wheat;
+  border: 2px solid black;
+  box-shadow: inset;
+  border-radius: 30px;
+  padding: 10px;
 }
+/* contact*/
+h1 {
+  text-align: center;
+  margin-top: 20px;
+}
+
+form {
+  width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+text-align: center;
+  border: 2px solid red;
+}
+
+label {
+  display: block;
+  margin-bottom: 6px;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+textarea {
+  height: 100px;
+}
+
+input[type="submit"] {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
 @media screen and (max-width:575px) {
   ul {
     flex-direction: column;
@@ -109,4 +156,14 @@ padding: 10px;
      */
     align-items: center;
   }
+  .pagenation ul {
+    padding: 5px;
+    width: 100%;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+#page a {
+    padding: 6px;
+}
 }
