--- a/shopify/templates/page.tech.liquid
+++ b/shopify/templates/page.tech.liquid
@@ -5,7 +5,7 @@
 {% elsif num < 0 %}
   <p>number not valid</p>
   {% endif %}
-  
+  <h1>hellooooooooooooo</h1>
  
   {% comment %}
 {% assign num1=10 %}
